Se suben cambios donde se agregan archivos para crear imagen docker de la aplicacion con conexion a sql server

--- a/Web/appsettings.Production.json
+++ b/Web/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionStringSQLServer": "Server=localhost,1433;Database=BdStore;User Id=sa;Password=P@ssW0rd2024;"
+    "ConnectionStringSQLServer": "Server=sqlserver;Database=BdStore;User Id=sa;Password=P@ssW0rd2024;"
   },
   "Logging": {
     "LogLevel": {
