--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionStringSQLServer": "Server=.;Database=BdStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConnectionStringSQLServer": "Server=sqlserver;Database=BdStore;User Id=sa;Password=P@ssW0rd2024;"
   },
   "Logging": {
     "LogLevel": {
