se crea docker file, y se hace ajuste de data semilla.

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ConnectionStringSQLServer": "Server=sqlserver;Database=BdStore;User Id=sa;Password=P@ssW0rd2024;"
+    "ConnectionStringSQLServer": "Server=127.0.0.1,1401;Database=BdStore;User Id=sa;Password=P@ssW0rd2024;"
+    //"ConnectionStringSQLServer": "Server=.;Database=BdStore;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
