--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ConnectionStringSQLServer": "Server=localhost,1433;Database=BdStore;User Id=sa;Password=P@ssW0rd2024;"
+    //"ConnectionStringSQLServer": "Server=localhost,1433;Database=BdStore;User Id=sa;Password=P@ssW0rd2024;",
+    "ConnectionStringSQLServer": "Server=.;Database=BdStore;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
